// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test cases for FormTextInput should render snapshot 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
          "lineHeight": 18,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "OpenSans-Regular",
          "fontWeight": "400",
        },
        Object {
          "color": "#33495E",
          "marginBottom": 6,
          "marginTop": 16,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 10,
            "lineHeight": 15,
            "textAlign": "left",
          },
          Object {
            "fontFamily": "OpenSans-Regular",
            "fontWeight": "400",
          },
          Object {
            "color": "#33495E",
          },
        ]
      }
    />
  </Text>,
  <View
    style={Object {}}
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      maxLength={40}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onValueChange={[MockFunction]}
      placeholderTextColor="#C9D6DF"
      rejectResponderTermination={true}
      style={
        Object {
          "borderColor": "#C9D6DF",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#001B36",
          "fontSize": 14,
          "height": 48,
          "paddingHorizontal": 16,
          "paddingVertical": 4,
          "textAlign": "left",
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>,
]
`;

exports[`Test cases for FormTextInput should render snapshot when input type is email 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
          "lineHeight": 18,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "OpenSans-Regular",
          "fontWeight": "400",
        },
        Object {
          "color": "#33495E",
          "marginBottom": 6,
          "marginTop": 16,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 10,
            "lineHeight": 15,
            "textAlign": "left",
          },
          Object {
            "fontFamily": "OpenSans-Regular",
            "fontWeight": "400",
          },
          Object {
            "color": "#33495E",
          },
        ]
      }
    />
  </Text>,
  <View
    style={Object {}}
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      keyboardType="email-address"
      maxLength={40}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onValueChange={[MockFunction]}
      placeholderTextColor="#C9D6DF"
      rejectResponderTermination={true}
      style={
        Object {
          "borderColor": "#C9D6DF",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#001B36",
          "fontSize": 14,
          "height": 48,
          "paddingHorizontal": 16,
          "paddingVertical": 4,
          "textAlign": "left",
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>,
]
`;

exports[`Test cases for FormTextInput should render snapshot when input type is number 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
          "lineHeight": 18,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "OpenSans-Regular",
          "fontWeight": "400",
        },
        Object {
          "color": "#33495E",
          "marginBottom": 6,
          "marginTop": 16,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 10,
            "lineHeight": 15,
            "textAlign": "left",
          },
          Object {
            "fontFamily": "OpenSans-Regular",
            "fontWeight": "400",
          },
          Object {
            "color": "#33495E",
          },
        ]
      }
    />
  </Text>,
  <View
    style={Object {}}
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      keyboardType="number-pad"
      maxLength={40}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onValueChange={[MockFunction]}
      placeholderTextColor="#C9D6DF"
      rejectResponderTermination={true}
      style={
        Object {
          "borderColor": "#C9D6DF",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#001B36",
          "fontSize": 14,
          "height": 48,
          "paddingHorizontal": 16,
          "paddingVertical": 4,
          "textAlign": "left",
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>,
]
`;

exports[`Test cases for FormTextInput should render snapshot when input type is password 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
          "lineHeight": 18,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "OpenSans-Regular",
          "fontWeight": "400",
        },
        Object {
          "color": "#33495E",
          "marginBottom": 6,
          "marginTop": 16,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 10,
            "lineHeight": 15,
            "textAlign": "left",
          },
          Object {
            "fontFamily": "OpenSans-Regular",
            "fontWeight": "400",
          },
          Object {
            "color": "#33495E",
          },
        ]
      }
    />
  </Text>,
  <View
    style={Object {}}
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      maxLength={40}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onValueChange={[MockFunction]}
      placeholderTextColor="#C9D6DF"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "borderColor": "#C9D6DF",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#001B36",
          "fontSize": 14,
          "height": 48,
          "paddingEnd": 36,
          "paddingHorizontal": 16,
          "paddingVertical": 4,
          "textAlign": "left",
        }
      }
      underlineColorAndroid="transparent"
    />
    <View
      style={
        Object {
          "position": "absolute",
          "right": 6,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#0084F8",
            "borderRadius": 4,
            "borderWidth": 0,
            "flex": 0,
            "justifyContent": "center",
            "opacity": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 14,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#C9D6DF",
                "fontSize": 20,
              },
              Object {
                "height": 16,
                "opacity": 0.4,
                "width": 20,
              },
              Object {
                "fontFamily": "icomoon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`Test cases for FormTextInput should render snapshot when input type is phone 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
          "lineHeight": 18,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "OpenSans-Regular",
          "fontWeight": "400",
        },
        Object {
          "color": "#33495E",
          "marginBottom": 6,
          "marginTop": 16,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 10,
            "lineHeight": 15,
            "textAlign": "left",
          },
          Object {
            "fontFamily": "OpenSans-Regular",
            "fontWeight": "400",
          },
          Object {
            "color": "#33495E",
          },
        ]
      }
    />
  </Text>,
  <View
    style={Object {}}
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      keyboardType="number-pad"
      maxLength={40}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onValueChange={[MockFunction]}
      placeholderTextColor="#C9D6DF"
      rejectResponderTermination={true}
      style={
        Object {
          "borderColor": "#C9D6DF",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#001B36",
          "fontSize": 14,
          "height": 48,
          "paddingHorizontal": 16,
          "paddingStart": 100,
          "paddingVertical": 4,
          "textAlign": "left",
        }
      }
      underlineColorAndroid="transparent"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F0F5F9",
          "borderRightColor": "#C9D6DF",
          "borderRightWidth": 0.5,
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "center",
          "left": 1,
          "marginTop": 2,
          "position": "absolute",
          "right": 5,
          "width": 90,
        }
      }
    >
      <Image
        height={12}
        source={
          Object {
            "testUri": "../../../packages/common/src/assets/images/flag.png",
          }
        }
        style={
          Object {
            "marginEnd": 6,
          }
        }
        width={18}
      />
      <Text
        style={
          Array [
            Object {
              "fontSize": 12,
              "lineHeight": 18,
              "textAlign": "left",
            },
            Object {
              "fontFamily": "OpenSans-Regular",
              "fontWeight": "400",
            },
            Object {
              "color": "#4C5F72",
            },
          ]
        }
      >
        +91
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#99A4AF",
              "fontSize": 12,
            },
            Object {
              "marginStart": 6,
            },
            Object {
              "fontFamily": "icomoon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>,
]
`;

exports[`Test cases for FormTextInput should render snapshot when inputPrefixText is not there 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
          "lineHeight": 18,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "OpenSans-Regular",
          "fontWeight": "400",
        },
        Object {
          "color": "#33495E",
          "marginBottom": 6,
          "marginTop": 16,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 10,
            "lineHeight": 15,
            "textAlign": "left",
          },
          Object {
            "fontFamily": "OpenSans-Regular",
            "fontWeight": "400",
          },
          Object {
            "color": "#33495E",
          },
        ]
      }
    />
  </Text>,
  <View
    style={Object {}}
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      keyboardType="number-pad"
      maxLength={40}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onValueChange={[MockFunction]}
      placeholderTextColor="#C9D6DF"
      rejectResponderTermination={true}
      style={
        Object {
          "borderColor": "#C9D6DF",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#001B36",
          "fontSize": 14,
          "height": 48,
          "paddingHorizontal": 16,
          "paddingVertical": 4,
          "textAlign": "left",
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>,
]
`;

exports[`Test cases for FormTextInput should render snapshot when password revealer is hide 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
          "lineHeight": 18,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "OpenSans-Regular",
          "fontWeight": "400",
        },
        Object {
          "color": "#33495E",
          "marginBottom": 6,
          "marginTop": 16,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 10,
            "lineHeight": 15,
            "textAlign": "left",
          },
          Object {
            "fontFamily": "OpenSans-Regular",
            "fontWeight": "400",
          },
          Object {
            "color": "#33495E",
          },
        ]
      }
    />
  </Text>,
  <View
    style={Object {}}
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      maxLength={40}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onValueChange={[MockFunction]}
      placeholderTextColor="#C9D6DF"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={Object {}}
      underlineColorAndroid="transparent"
    />
  </View>,
]
`;
